*Empty MediaWiki Message*

--- a/Applications.mw
+++ b/Applications.mw
@@ -1,7 +1,7 @@
 == Overview ==
 Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be foolish to expect people to only operate their handsets with stylus. For this reason, some core phone-related applications will be developed with finger (as opposed to stylus navigation) in mind.
 
-{{note| Applications listed on this page are listing in order of priority. Applications in '''bold''' are required for mass production and the first shippment of handsets.}}
+{{note| Applications listed on this page are listing in order of priority and by phase. 1st phase is for January. 2nd phase is more long term...when we are ready for mass market appeal.}}
 
 
 == General Principles ==
@@ -16,20 +16,20 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 {{note|Innovation usually happens at the bottom. What we need to do is provide consistent ways to develop and deploy appliations.}}
 
 ==Finger-Based Applications ==
-scrolling region should be user defined (left or right side) 
-=== Required ===
-* '''[[Dialer]]'''
-* '''[[Main Menu]]'''
-* '''[[Music Player]]'''
-* '''[[History]]'''
+
+=== 1st Phase ===
+* [[Dialer]]
+* [[Main Menu]]
+* [[Music Player]]
+* [[History]]
+
+=== 2nd Phase ===
 * [[Clocks]]
 * [[GPS Navigation]]
 * [[Screen Saver]]
 * [[Calculator]]
 * [[Unit Converter]]
 * [[Game]]
-
-=== For a Rainy Day ===
 * [[Guitar Tuning]]
 * [[Code Memo]]
 
@@ -57,8 +57,6 @@ scrolling region should be user defined (left or right side)
 * [[IM]]
 * [[Web Browser]]
 * [[Reader]]
-
-=== For a Rainy Day ===
 * [[System Info]]
 
 == Panel Applications ==
