--- a/Applications.mw
+++ b/Applications.mw
@@ -63,7 +63,7 @@ Although [[OpenMoko]] is designed for smartphones that use a stylus, it would be
 
 Panel Applications are individual executables residing in the [[Top Panel]]. They're usually indicating a status and offer a pop-up menu. We are not yet sure whether there is enough screen real estate for this huge number of panel applications.
 
-=== Required ===
+=== 1st Phase ===
 * [[GSM & GPRS Connection Status]]
 * [[GPS Connection Status]]
 * [[Battery Monitor]]
@@ -71,7 +71,7 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 * [[Bluetooth Connection Status]]
 * [[USB Connection Status]]
 
-=== For a Rainy Day ===
+=== 2nd Phase ===
 * [[Search]]
 * [[IM Presence]]
 * [[Screen Grabber]]
