*Empty MediaWiki Message*

--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -1,4 +1,3 @@
-
 ===Install dependencies===
 
 * use aptitude, apt-get, urpmi, or whatever your distro supports
@@ -9,12 +8,13 @@
 ** qmake from Qt4
 
 ===Build everything in one run using Qmake===
+{{NOTE|qmake is Mickey's preferred build tool, you can use autotools as well...}}
 
   cd <svn-checkout>/OM-2007
+  . ./makevars.sh
   qmake
   make
 
+Now the applications should be found in ./bin.
 
-===Build everything using autotools===
-
-TBD
+===
