*Empty MediaWiki Message*

--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -8,7 +8,7 @@
 ** qmake from Qt4
 
 ===Build everything in one run using Qmake===
-{{NOTE|qmake is Mickey's preferred build tool, you can use autotools as well...}}
+{NOTE|qmake is Mickey's preferred build tool, you can use autotools as well...}
 
   cd <svn-checkout>/OM-2007
   . ./makevars.sh
