*Empty MediaWiki Message*

--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -10,11 +10,21 @@
 ===Build everything in one run using Qmake===
 {{Note|qmake is Mickey's preferred build tool, you can use autotools as well...}}
 
-  cd <svn-checkout>/OM-2007
+  cd <svn-checkout>/src/target/OM-2007
   . ./makevars.sh
   qmake
   make
 
 Now the applications should be found in ./bin.
 
-===
+===Set your theme to OpenMoko===
+
+Edit $HOME/.gtkrc-2.0 to something like that:
+
+  include "<PATH-to-svn-checkout>/src/target/OM-2007/artwork/themes/openmoko-standard/gtk-2.0/gtkrc"
+
+===Run the examples==
+
+bin/openmoko-paned-demo
+bin/openmoko-finger-demo
+bin/openmoko-chordmaster
