--- a/How_to_run_OpenMoko_Apps_on_PC.mw
+++ b/How_to_run_OpenMoko_Apps_on_PC.mw
@@ -23,8 +23,8 @@ Edit $HOME/.gtkrc-2.0 to something like that:
 
   include "<PATH-to-svn-checkout>/src/target/OM-2007/artwork/themes/openmoko-standard/gtk-2.0/gtkrc"
 
-===Run the examples==
+===Run the examples===
 
-bin/openmoko-paned-demo
-bin/openmoko-finger-demo
-bin/openmoko-chordmaster
+  bin/openmoko-paned-demo
+  bin/openmoko-finger-demo
+  bin/openmoko-chordmaster
