--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -17,6 +17,9 @@ People like to see plugins for
 * Eclipse
 * Kdevelop
 
+=== UI Designer ===
+Glade code generation is deprectated, so we don't want to use it. The Gtk+ powers told me that the plan is to have gtk 2.12 (out early 2007) with support for GtkBuilder, a libglade derivative which breaks a bit the XML definition in order to support all the new widgets and properties; as soon as it's in the other ui builders will add support for this format. See also [http://bugzilla.gnome.org/show_bug.cgi?id=172535 the relevant bug entry]
+
 == Community Support Related ==
 
 === projects.openmoko.org ===
