--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -1,20 +1,32 @@
 == Mailing lists ==
 
-There are a number of development related mailinglsts at [http://lists.gta01.hmw-consulting.de/ lists.gta01].
+There are a number of development related mailinglsts at both  [http://lists.internal.openmoko.org/ lists.internal.openmoko.org] and [http://lists.openmoko.org/ lists.openmoko.org].
 
-=== coreteam ===
+=== coreteam@lists.internal.openmoko.org ===
 
 Product Management and Consulting only, for strategic discussions
 
-=== devel ===
+=== neo1973-devel@lists.internal.openmoko.org ===
 
-Main developer list, this is where all questions are raied and hopefully answered ;)
+This is the main internal development list about anything regarding the Neo1973 hardware, the software development for it, etc.
 
-=== buglog ===
+=== framework-devel@lists.openmoko.org ===
+
+This is a (soon completely public) mailinglist on the OpenMoko Framework
+
+=== distro-devel@lists.openmoko.org ===
+
+This is a (soon completely public) mailinglist on the OpenMoko Distribution.  Here issues such as ipk packaging related and root fs image related topics should be discussed.  Also, questions regarding the OpenEmbedded based build process go here.
+
+=== devel@lists.internal.openmoko.org ===
+
+Old developer list, only for legacy reasons.  This will become an alias for neo1973-devel soon.
+
+=== buglog@lists.openmoko.org ===
 
 A read-only list where every status update to a bug (bugzilla entry) will get posted.  Nice to keep updated on the bugsquashing progress
 
-=== commitlog ===
+=== commitlog@lists.openmoko.org ===
 
 A read-only list where every source code change (commit to the subversion server) gets posted.  Nice to keep posted on development progress.
 
