/* coreteam@lists.internal.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -4,7 +4,7 @@ There are a number of development related mailinglsts at both  [http://lists.int
 
 === coreteam@lists.internal.openmoko.org ===
 
-Product Management and Consulting only, for strategic discussions
+Product Management and Consulting only, for strategic discussions. Better known under its alias <b>coreteam@openmoko.org</b>
 
 === neo1973-devel@lists.internal.openmoko.org ===
 
