/* devel@lists.internal.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -26,7 +26,7 @@ http://lists.openmoko.org/cgi-bin/mailman/listinfo/distro-devel
 
 === devel@lists.internal.openmoko.org ===
 
-Old developer list, only for legacy reasons.  This will become an alias for neo1973-devel soon.
+Old developer list, became an alias for neo1973-devel.
 
 === buglog@lists.openmoko.org ===
 
