/* commitlog@lists.openmoko.org */

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -36,6 +36,14 @@ A read-only list where every status update to a bug (bugzilla entry) will get po
 
 A read-only list where every source code change (commit to the subversion server) gets posted.  Nice to keep posted on development progress.
 
+http://lists.openmoko.org/cgi-bin/mailman/listinfo/commitlog
+
+=== community@lists.openmoko.org ===
+
+This is a public mailinglist for discussion of our user + developer community out there
+
+http://lists.openmoko.org/cgi-bin/mailman/listinfo/community
+
 == Wiki ==
 
 This Wiki. You're already in it, if you're reading this.
