--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -23,6 +23,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [[Press coverage]]- A list of related news articles and web content for OpenMoko
 * [[Free phones]] - A list of FOSS developers to whom we want to give free phones
 * [[Hosting infrastructure]] - Internal documentation on our hosting infrastructure
+* [[Shipping hardware]] - What to do when shipping hardware to Germany
 
 == Getting started with this wiki ==
 
