--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -18,6 +18,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 
 == Research and Reference Information ==
 * [[Wish List]] - A collection of ideas and ideals we'd like to see implemented someday
+* [[Random Ideas]] - A collection of ideas and wishes from Mobile Phone users
 
 == Miscellaneous ==
 * [[Press coverage]]- A list of related news articles and web content for OpenMoko
