--- a/PIM_Storage.mw
+++ b/PIM_Storage.mw
@@ -7,13 +7,13 @@ PIM storage describes a means of storing data in an extensible and cross-referen
 * Great bidirectional sync of personal data
 * Easy method for backup (ideally this should be automatic)
 * Real-time incremental search
-* Autcomplete of personal data information
+* Autocomplete of personal data information
 
 == Use Cases ==
 * I would like to attach abritray data to a contact (AKA: custom fields)
-* I would like some level of integration with automatic switching of profiles. For example, it would b e cool to automatically backup my personal data to my desktop PC when I get home.
+* I would like some level of integration with automatic switching of profiles. For example, it would be cool to automatically backup my personal data to my desktop PC when I get home.
 * I want to type the first few numbers of a phone number and be presented a list of matching contacts.
-* I want to add a contact to multiple groups
+* I want to add a contact to multiple groups (AKA: categories)
 
 == Constraints ==
 (TBD)
