--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -13,6 +13,9 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 
 * [[Documentation]] - End-user related documentation
 * [[Hardware]] - Hardware-related (developer) documentation
+** [[QT2410]] - The Armzone development board
+** [[GTA01 prototype]] - The actual Neo1973 phone prototypes
+** [[GT-001]] - GSM Modem
 * [[Software]] - GTA01 software-related (developer) documentation
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
 
