*Empty MediaWiki Message*

--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -15,7 +15,7 @@ However, the vanilla u-boot doesn't support many of the features that GTA01 need
 
 == Bootloader source code ==
 
-The current bootloader source code can be found at [http://people.gta01.hmw-consulting.de/laforge/src/u-boot/current ]. You will need the original tar.bz2 archive as well as the u-boot-qt2410.patch.
+The current bootloader source code can be found at [http://people.openmoko.org/laforge/src/u-boot/current ]. You will need the original tar.bz2 archive as well as the u-boot-qt2410.patch.
 
 Untar the sources, apply the patch.  run "make qt2410_config", run "make".  You will get a resulting "u-boot.bin" image, which you can directly flash (either using existing bootloader or [[sjf2410-linux]]) into NAND.
 
@@ -23,7 +23,7 @@ Untar the sources, apply the patch.  run "make qt2410_config", run "make".  You 
 == Bootloader binary ==
 
 The latest bootloader binary (for NAND) can be found at 
-[http://people.gta01.hmw-consulting.de/laforge/src/u-boot/current/u-boot.bin].  It should be written to the NAND flash address 0x00000000 (size 0x30000)
+[http://people.openmoko.org/laforge/src/u-boot/current/u-boot.bin].  It should be written to the NAND flash address 0x00000000 (size 0x30000)
 
 == Bootloader development ==
 
