--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -15,6 +15,8 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 * [[Hardware]] - Hardware-related (developer) documentation
 ** [[QT2410]] - The Armzone development board
 ** [[GTA01 prototype]] - The actual Neo1973 phone prototypes
+*** [[GTA01v3]] - v3 of the Prototype
+*** [[GTA01v4]] - v4 of the Prototype
 ** [[GT-001]] - GSM Modem
 * [[Software]] - GTA01 software-related (developer) documentation
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
