--- a/Main_Page.mw
+++ b/Main_Page.mw
@@ -17,6 +17,7 @@ This is to be the evolving, definitive resource on [[GTA01]] development -- the 
 ** [[GTA01 prototype]] - The actual Neo1973 phone prototypes
 *** [[GTA01v3]] - v3 of the Prototype
 *** [[GTA01v4]] - v4 of the Prototype
+*** [[GTA01Bv2]] - v2 of the Prototype with Bluetooth
 ** [[GT-001]] - GSM Modem
 * [[Software]] - GTA01 software-related (developer) documentation
 * [[:Category:ToDo|To-Do List]] - All the articles with things that need to get done
