--- a/Kernel.mw
+++ b/Kernel.mw
@@ -85,3 +85,6 @@ Asoc provides us with
 Since Asoc is currently lacking both a S3C2410 platform driver and a [[WM8976]] codec driver, we will need to implement both.  The codec driver is expected to be easy, since WM8971 and WM8974 are already supported, and the changes are expected to be not too big.
 
 At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches/alsa/asoc-v0.12.patch) is current.  It was written against a 2.6.17 kernel and therefore matches perfectly with our GTA01 kernel.
+
+
+== Kernel Todo ==
