--- a/Kernel.mw
+++ b/Kernel.mw
@@ -88,3 +88,32 @@ At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches
 
 
 == Kernel Todo ==
+* use bigger font as default
+* speed up in-kernel boot process
+** delay calibration
+** sd-card driver as module
+** framebuffer takes ages
+* check GPIO initialization with regard to [[GTA01v4]] changes
+
+===  TS07.10 multiplex ===
+
+=== PCF50606 ===
+* fix conversion problems when setting alarm time/date
+* add conversion chart for temperature, once battery type NTC data sheet is known
+* add some intelligent shutdown handler when POWER key is pressed for more then 3/5 seconds (input device KEY_POWER?)
+
+=== backlight ===
+* first, get a working backlight on/off driver
+* later: implement smooth fade-in, fade-out
+
+=== vibrator ===
+* implement it as LED driver
+* test it once prototype with case is available
+* later: implement PWM
+
+=== USB device driver ===
+* make sure usb-net works stable with [[GTA01v4]]
+* test switching between usb host and usb device
+
+=== Sound ===
+* waiting for S3C2410 host asoc support by Wolfson
