--- a/Kernel.mw
+++ b/Kernel.mw
@@ -88,6 +88,8 @@ At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches
 
 
 == Kernel Todo ==
+
+=== Various ===
 * use bigger font as default
 * speed up in-kernel boot process
 ** delay calibration
@@ -117,3 +119,13 @@ At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches
 
 === Sound ===
 * waiting for S3C2410 host asoc support by Wolfson
+
+=== Power Management ===
+* test, debug and fix suspend on user request
+* test, debug and fix wakeup on
+** IRQ on serial UART (GSM)
+** IRQ on serial UART (GPS)
+** IRQ from PMU (charger insert/remove or the like)
+** IRQ from ADC/touchscreen
+** 911 button press (GPIO IRQ)
+** headphone jack insert/remove
