--- a/Kernel.mw
+++ b/Kernel.mw
@@ -103,6 +103,7 @@ At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches
 * fix conversion problems when setting alarm time/date
 * add conversion chart for temperature, once battery type NTC data sheet is known
 * add some intelligent shutdown handler when POWER key is pressed for more then 3/5 seconds (input device KEY_POWER?)
+* test charging
 
 === backlight ===
 * first, get a working backlight on/off driver
