--- a/Kernel.mw
+++ b/Kernel.mw
@@ -87,7 +87,7 @@ Since Asoc is currently lacking both a S3C2410 platform driver and a [[WM8976]] 
 At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches/alsa/asoc-v0.12.patch) is current.  It was written against a 2.6.17 kernel and therefore matches perfectly with our GTA01 kernel.
 
 
-== Kernel Todo ==
+== Kernel TODO ==
 
 === Various ===
 * use bigger font as default
@@ -102,8 +102,10 @@ At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches
 === PCF50606 ===
 * fix conversion problems when setting alarm time/date
 * add conversion chart for temperature, once battery type NTC data sheet is known
+** who is supposed to have that datasheet?
 * add some intelligent shutdown handler when POWER key is pressed for more then 3/5 seconds (input device KEY_POWER?)
-* test charging
+* test battery charging
+* implement 'persistent alarm setting' (see mail from mickey)
 
 === backlight ===
 * first, get a working backlight on/off driver
