*Empty MediaWiki Message*

--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -1,1 +1,11 @@
-(Coming Soon)
+== Hardware Components ==
+* RTL8xxx Ethernet MAC
+** This adds network connectivity during development
+* Two 7-segment LED displays
+* Two DB-9 headers
+** Serial Console (level-shifted to true RS232 levels)
+** ?
+* One DB-25 header
+** ?
+* One 2x10pin 2.54mm header
+** JTAG Port
