*Empty MediaWiki Message*

--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -12,4 +12,12 @@
 
 == Schematics ==
 
+FIXME
+
 == Usage instructions ==
+
+FIXME
+
+== Questions ==
+
+* Can it also be connected to [[GTA01v4]] ?
