--- a/Kernel.mw
+++ b/Kernel.mw
@@ -108,7 +108,7 @@ At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches
 * implement 'persistent alarm setting' (see mail from mickey)
 
 === backlight ===
-* first, get a working backlight on/off driver
+* rather than only on/off support, use PWM for backlight levels
 * later: implement smooth fade-in, fade-out
 
 === vibrator ===
