--- a/Kernel.mw
+++ b/Kernel.mw
@@ -132,3 +132,24 @@ At the time of this writing, asoc-v0.12 (http://www.rpsys.net/openzaurus/patches
 ** IRQ from ADC/touchscreen
 ** 911 button press (GPIO IRQ)
 ** headphone jack insert/remove
+
+=== GPIO access ===
+
+The following GPIO's need to be accessed from userspace:
+
+==== GTA01v4 ====
+* GPS_PWRON
+** allows us to power-up the GPS
+* MODEM_RST
+** resetting the GSM Modem
+* MODEM_ON
+** switching GSM Modem on
+* 911_KEY
+** needs to be an input device with a single key
+* DLGSM
+** switch headphone port to GSM UART mode?
+* JACK_INSERT
+** headphone jack insertion, reported via input device
+
+==== GTA01Bv2 ====
+* GSM_EN ?
