--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -16,7 +16,7 @@ FIXME
 
 == Usage instructions ==
 
-FIXME
+[http://people.gta01.hmw-consulting.de/sean_chiang/Debugboard.pdf Debug Board]
 
 == Questions ==
 
