--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -12,7 +12,7 @@
 
 == Schematics ==
 
-FIXME
+[http://people.gta01.hmw-consulting.de/sean_chiang/Debugboard.pdf Debug Board]
 
 == Usage instructions ==
 
