*Empty MediaWiki Message*

--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -52,16 +52,16 @@ This Wiki. You're already in it, if you're reading this.
 
 == Bugzilla ==
 
-Our bug tracking system, available at [http://bugzilla.gta01.hmw-consulting.de/ bugzilla.gta01].
+Our bug tracking system, available at http://bugzilla.openmoko.org/
 
 == SVN ==
-There is a [http://subversion.tigris.org/ Subversion] server available at svn.gta01.hmw-consulting.de. 
+There is a [http://subversion.tigris.org/ Subversion] server available at svn.openmoko.org. 
 
-Read-only access is provided via [http://svn.gta01.hmw-consulting.de/ http://svn.gta01.hmw-consulting.de/]. You should not normally use this URL, it's mainly for later public access after product release.
+Read-only access is provided via http://svn.openmoko.org/. You should not normally use this URL, it's mainly for later public access after product release.
 
-Read-write access for developers is provided via [https://svn.gta01.hmw-consulting.de:2342/ https://svn.gta01.hmw-consulting.de:2342]
+Read-write access for developers is provided via https://svn.openmoko.org:2342
 
-Web access for occasional browsing is available via [http://svnweb.gta01.hmw-consulting.de/ SvnWeb]
+Web access for occasional browsing is available via http://svnweb.openmoko.org/
 
 If you need help, please read more about [[Using Subversion]].
 
