--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -25,3 +25,7 @@ FIXME
 == Questions ==
 
 * Can it also be connected to [[GTA01v4]] ?
+
+== Bugs/Problems ==
+
+see http://bugzilla.openmoko.org/cgi-bin/bugzilla/buglist.cgi?product=Debug+Board
