--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -20,7 +20,16 @@ http://people.openmoko.org/sean_chiang/bottom.pdf
 
 == Usage instructions ==
 
-FIXME
+=== Connectors ===
+
+==== Debug cable to phone ====
+Use the flat ribbon-cable to connect to the phone.  
+# The wide end is for the Debug board, the narrow end for the phone
+# For both sides:
+## Lift the brown lever of the connector on the PCB
+## Place the copper contacts on the bottom (brown surface facing to the top.
+## Insert the ribbon cable as far as possible into the connector (it won't go in all the way, that's normal)
+## Close the brown lever to lock the ribbon cable
 
 == Questions ==
 
