--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -31,6 +31,27 @@ Use the flat ribbon-cable to connect to the phone.
 ## Insert the ribbon cable as far as possible into the connector (it won't go in all the way, that's normal)
 ## Close the brown lever to lock the ribbon cable
 
+==== Serial Console ====
+
+* The serial console is available via one of the two DB9-sockets, It has a DTE (terminal) configuration.
+* The socket is called "P4", which is written in small white letters next to it on the PCB.  If you're looking at the three female DB-Ports (from the plug side), it is the left port.
+* You can use any standard USB-Serial converter and plug it directly onto the DB9-socket. There's no level-shifting required.
+
+==== JTAG ====
+
+* The 20pin JTAG header is a standard ARM JTAG.
+* Pin 1 can be found next to the corner of the PCB (small white circular mark printed on PCB).
+* Make sure to have the red wire of the ribbon cable go to Pin 1
+
+==== Power Suppply ====
+
+* If the phone is self-powered, there is no need to connect a power supply for JTAG, USB and serial port, since those are phone-powered
+* If you need Ethernet, you will have to either supply power via the USB device jack, or via a +5V power supply.
+
+=== Reset button ===
+
+S5 (small white button in corner of PCB) is a reset button.  If you press it, it resets the device.
+
 == Questions ==
 
 * Can it also be connected to [[GTA01v4]] ?
