--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -52,6 +52,18 @@ Use the flat ribbon-cable to connect to the phone.
 
 S5 (small white button in corner of PCB) is a reset button.  If you press it, it resets the device.
 
+=== Seven-Segment Display ===
+
+FIXME
+
+=== Ethernet ===
+
+There currently is no software/driver support for the Ethernet port in OpenMoko. Please stay tuned.
+
+=== Secure Media ===
+
+FIXME
+
 == Questions ==
 
 * Can it also be connected to [[GTA01v4]] ?
