--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -33,6 +33,8 @@ Use the flat ribbon-cable to connect to the phone.
 
 ==== Serial Console ====
 
+* In order to get serial console access, Switch 8 of DIP-Switch SW1 has to be set to 'ON'
+* Your debug board needs to be modified in accordance with http://bugzilla.openmoko.org/cgi-bin/bugzilla/show_bug.cgi?id=3
 * The serial console is available via one of the two DB9-sockets, It has a DTE (terminal) configuration.
 * The socket is called "P4", which is written in small white letters next to it on the PCB.  If you're looking at the three female DB-Ports (from the plug side), it is the left port.
 * You can use any standard USB-Serial converter and plug it directly onto the DB9-socket. There's no level-shifting required.
