--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -1,7 +1,8 @@
 == Hardware Components ==
-* RTL8xxx Ethernet MAC
+* RTL8019AS Ethernet MAC
 ** This adds network connectivity during development
 * Two 7-segment LED displays
+** for debug output
 * Two DB-9 headers
 ** Serial Console (level-shifted to true RS232 levels)
 ** ?
