more PMU driver infos

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -125,6 +125,33 @@ root@fic-gta01:/sys/devices/platform/s3c2410-i2c/i2c-0/0-0008$ cat voltage_dcd
 1300
 </pre>
 
+==== Battery Voltage ====
+
+The battery voltage (in millivolts) can be read via sysfs
+
+<pre>
+root@fic-gta01:~$ cat /sys/bus/i2c/devices/0-0008/battvolt 
+3767
+</pre>
+
+==== Battery charging current ====
+
+The battery charging current (in milliamperes) can be read via sysfs
+
+<pre>
+root@fic-gta01:~$ cat /sys/bus/i2c/devices/0-0008/chgcur 
+0
+</pre>
+
+==== Battery temperature ====
+
+The battery temperature (in centigrades) can be read via sysfs
+
+<pre>
+root@fic-gta01:~$ cat /sys/bus/i2c/devices/0-0008/battemp
+25
+</pre>
+
 == Kernel TODO ==
 
 === Various ===
