/* Power Management Unit (PMU) */

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -98,6 +98,13 @@ The PMU is supported via the "pcf50606" driver in the kernel (drivers/i2c/chips/
 
 This driver provides a number of userspace interfaces for the various bits and pieces of the PMU
 
+==== Power Button, Charger insertion ====
+
+The PMU creates an input device that supports the following keys:
+* KEY_POWER: power button of GTA01
+* KEY_POWER2: USB power supply insert/remove
+* KEY_BATTERY: Charger insert/remove
+
 ==== RTC ====
 
 The real-time clock, including the alarm feature, is implemented as standard RTC (/dev/rtc).
