--- a/Neo_1973_GTA01_Power_Management.mw
+++ b/Neo_1973_GTA01_Power_Management.mw
@@ -113,7 +113,7 @@ FIXME: no idea what this is for
 * Derived from IO_3V3
 * Powers NAND Flash
 
-==== PMU Driver ====
+==== PM Driver ====
 
 * do we really want to switch it on/off before every flash access?
 * if we go to standby, IO_3V3 will be switched off, thus FLASH_3V3 is off, too
