--- a/Neo_1973_GTA01_Power_Management.mw
+++ b/Neo_1973_GTA01_Power_Management.mw
@@ -94,7 +94,7 @@ This is the S3C2410 Core Voltage
 
 * switch on only in case GPS is enabled
 
-==== Initialization ====
+==== Initial state ====
 
 * disable by u-boot GPIO initialization
 
