--- a/Neo_1973_GTA01_Power_Management.mw
+++ b/Neo_1973_GTA01_Power_Management.mw
@@ -106,7 +106,11 @@ FIXME: no idea what this is for
 
 ==== PMU Driver ====
 
-* permanently disabled 
+* permanently disabled
+
+==== Initial state ====
+
+* disabled by PMU initialization in u-boot
 
 === FLASH_3V3 ===
 
