--- a/Neo_1973_GTA01_Power_Management.mw
+++ b/Neo_1973_GTA01_Power_Management.mw
@@ -143,6 +143,17 @@ FIXME: no idea what this is for
 * Used by
 ** AGPS
 
+* Controlled by
+** EN_GPS2V8 GPIO
+
+==== PM Driver ====
+
+* enable only if GPS is used.
+
+==== Initial State ====
+
+* disabled by u-boot GPIO initialization
+
 === SD_3V3 ===
 
 * Derived from IO_3V3
