--- a/Neo_1973_GTA01_Power_Management.mw
+++ b/Neo_1973_GTA01_Power_Management.mw
@@ -115,12 +115,21 @@ FIXME: no idea what this is for
 === FLASH_3V3 ===
 
 * Derived from IO_3V3
-* Powers NAND Flash
+
+* Used by
+**  NAND Flash
+
+* Controlled by
+** SD_EN GPIO
 
 ==== PM Driver ====
 
 * do we really want to switch it on/off before every flash access?
 * if we go to standby, IO_3V3 will be switched off, thus FLASH_3V3 is off, too
+
+==== Initial state ====
+
+* on, enabled by u-boot GPIO initialization
 
 === AVDD ===
 
