--- a/Neo_1973_GTA01_Power_Management.mw
+++ b/Neo_1973_GTA01_Power_Management.mw
@@ -188,3 +188,18 @@ FIXME: no idea what this is for
 
 * Controlled by
 ** SD_ON GPIO
+
+==== PM Driver ====
+
+* we don't want to switch this off while mounted, do we?
+
+
+==== Initial state ====
+
+* probably disabled, unless somebody uses 'mmcinit' from u-boot
+* but we can't disable it without disabling NAND.
+* result: enabled by u-boot GPIO initialization
+
+== Kernel API ==
+
+== Userspace API ==
