/* Upstream Source tarballs */

--- a/OpenEmbedded.mw
+++ b/OpenEmbedded.mw
@@ -26,7 +26,7 @@ The way how that 'overlay' tree works is: It gives us the ability to add rules b
 === Upstream Source tarballs ===
 
 When bitbake builds a particular OE package, it downloads the original source code of the upstream project (e.g. Linux kernel) from the web.
-After downloading it, it applies a series of local patches to it.  Those patches are from either the [[OE upstream snapshot]], or from the [[OpenMoko OE overlay tree]].  
+After downloading it, it applies a series of local patches to it.  Those patches are from either the [[OpenEmbedded#OE_upstream_snapshot]], or from the [[OpenEmbedded#OpenMoko_OE_overlay_tree]].  
 
 The unpatched source tarballs are available from http://buildhost.openmoko.org/sources/
 
