--- a/OpenEmbedded.mw
+++ b/OpenEmbedded.mw
@@ -57,3 +57,6 @@ It contains
 
 The binary packages of intermediate "inofficial" releases are available at 
 http://buildhost.openmoko.org/tmp/gta01/deploy/ipk
+
+The binary packages of intermediate "official" releases are available at 
+http://buildhost.openmoko.org/releases/
