--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -52,7 +52,9 @@ This Wiki. You're already in it, if you're reading this.
 
 == Bugzilla ==
 
-Our bug tracking system, available at http://bugzilla.openmoko.org/
+Our bug tracking system for software issues (which will become public at product release time) is available at http://bugzilla.openmoko.org/
+
+Our internal bug tracking system, mainly for hardware issues, is available at http://bugzilla.internal.openmoko.org/
 
 == SVN ==
 There is a [http://subversion.tigris.org/ Subversion] server available at svn.openmoko.org. 
