--- a/Community_Resources.mw
+++ b/Community_Resources.mw
@@ -48,7 +48,9 @@ http://lists.openmoko.org/cgi-bin/mailman/listinfo/community
 
 == Wiki ==
 
-This Wiki. You're already in it, if you're reading this.
+This Wiki is our internal wiki, http://wiki.internal.openmoko.org/. You're already in it, if you're reading this.
+
+There is another wiki (with very little content so far) which will be the public wiki once the product is released at http://wiki.openmoko.org/
 
 == Bugzilla ==
 
