*Empty MediaWiki Message*

--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -1,3 +1,5 @@
+[[Image:Debug board top.jpg|thumb|400px|front side]]
+[[Image:Debug board bottom.jpg|thumb|400px|front side]]
 == Hardware Components ==
 * RTL8019AS Ethernet MAC
 ** This adds network connectivity during development
