/* Debug cable to phone */

--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -34,6 +34,8 @@ Use the flat ribbon-cable to connect to the phone.
 ## Insert the ribbon cable as far as possible into the connector (it won't go in all the way, that's normal)
 ## Close the brown lever to lock the ribbon cable
 
+There's a [[Connecting GTA01Bv2 with Debug Board]] foto story ;)
+
 ==== Serial Console ====
 
 * In order to get serial console access, Switch 8 of DIP-Switch SW1 has to be set to 'ON'
