--- a/Debug_Board_v1.mw
+++ b/Debug_Board_v1.mw
@@ -1,5 +1,6 @@
-[[Image:Debug board top.jpg|thumb|400px|front side]]
-[[Image:Debug board bottom.jpg|thumb|400px|front side]]
+[[Image:Debug board top.jpg|thumb|400px|top side]]
+[[Image:Debug board bottom.jpg|thumb|400px|bottom side]]
+[[Image:Debug board top annotated.jpg|400px|annotated top side]]
 == Hardware Components ==
 * RTL8019AS Ethernet MAC
 ** This adds network connectivity during development
