how to deal with NAND flash

--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -8,9 +8,9 @@ There is some number of blocks at the beginning which are guaranteed to be good.
 
 The solution is split into various pieces
 
-=== Bootloader ===
+=== Boot loader ===
 
-The bootloader itself contains a small first-stage bootloader for the [[Steppingstone]]. 
+The boot loader itself contains a small first-stage boot loader for the [[Steppingstone]]. 
 
 This code (which Harald wrote in ARM assembly) needs to be altered to detect and skip bad blocks.  At this time, the bootloader could itself extend over bad blocks.  However, how do we first flash the bootloader into NAND? The JTAG flashing program has no support for detecting bad blocks.
 
@@ -22,7 +22,7 @@ command, and read it later again via
  nand read.e
 command.  Those two variants (as opposed to their non-".e"-postfixed versions) simply skip bad blocks
 
-=== Root Filesystem ==
+=== Root Filesystem ===
 
 The root filesystem uses JFFS2, which is already bad block tolerant.  It, too, has to be written using the
  nand write.e
