--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -10,7 +10,7 @@ The solution is split into various pieces
 
 === Boot loader ===
 
-The boot loader itself contains a small first-stage boot loader for the [[Steppingstone]]. 
+The boot loader itself contains a small first-stage boot loader for the [[S3C2410 Steppingstone]]. 
 
 This code (which Harald wrote in ARM assembly) needs to be altered to detect and skip bad blocks.  At this time, the bootloader could itself extend over bad blocks.  However, how do we first flash the bootloader into NAND? The JTAG flashing program has no support for detecting bad blocks.
 
