--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -197,7 +197,7 @@ rootfs flash partition:
 <pre>
 QT2410 # ext2load mmc 0 0x32000000 rootfs.jffs2
 QT2410 # nand erase 0x00634000 0x39cc000
-QT2410 # nand write 0x32000000 0x00634000 real_size_of_rootfs_in_hex
+QT2410 # nand write.e 0x32000000 0x00634000 real_size_of_rootfs_in_hex
 </pre>
 
 Please note that this will only work with root file system sizes that are smaller than the amount of memory above 0x32000000, which in the case of 64MB SDRAM is something like 32MB.
