/* Flashing a root filesystem into NAND */

--- a/Userspace_root_image.mw
+++ b/Userspace_root_image.mw
@@ -26,7 +26,7 @@ The image can then be installed on the target device via the [[u-boot]] bootload
 
  QT2410 # tftpboot 0x32000000 rootfs.jffs2
  QT2410 # nand erase 0x634000 0x39cc000
- QT2410 # nand write 0x32000000 0x634000 0x700000
+ QT2410 # nand write.e 0x32000000 0x634000 0x700000
 
 And then booted (in this example with a kernel downloaded via tftp/ethernet) by
 
