/* Kernel Boot Parameters */

--- a/Kernel.mw
+++ b/Kernel.mw
@@ -39,11 +39,10 @@ u-boot needs all images (such as kernel, initrd, ...) in the form of an uImage. 
 
 == Kernel Boot Parameters ==
 
-The kernel image (once http://people.gta01.hmw-consulting.de/laforge/tmp/qt2410-biglcd.patch is integrated) has a new boot parameter "tft".
-
-If you boot without any tft= parameter, the 'stock' qt2410 240x320 TFT panel is assumed.
-
-If you boot with "tft=b" ('b' for big), the timings for the SHARP 640x480 TFT panel are used.
+Since the Qt2410 can be used with different LCMs, the kernel images for the Qt2410 have a boot parameter "tft":
+* If you boot without any tft= parameter, the 'stock' qt2410 240x320 TFT panel is assumed.
+* If you boot with "tft=b" ('b' for big), the timings for the SHARP 8" 640x480 TFT panel are used.
+* If you boot with "tft=p" ('p' for production), the timings for the 2.8" 480x640 TFT panel are used.
 
 == Kernel Subsystems ==
 
