--- a/Applications.mw
+++ b/Applications.mw
@@ -75,3 +75,7 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 * [[Search]]
 * [[IM Presence]]
 * [[Screen Grabber]]
+
+
+== Applications Dependcy ==
+* [[Wish List]]
