--- a/Applications.mw
+++ b/Applications.mw
@@ -78,4 +78,4 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 
 
 == Applications Dependcy ==
-* [[Wish List]]
+* [[Application Wish List]]
