--- a/Applications.mw
+++ b/Applications.mw
@@ -77,5 +77,5 @@ Panel Applications are individual executables residing in the [[Top Panel]]. The
 * [[Screen Grabber]]
 
 
-== Applications Dependcy ==
-* [[Application Wish List]]
+== Applications Dependency ==
+* [[Applications Wish List]]
