--- a/U-Boot.mw
+++ b/U-Boot.mw
@@ -202,7 +202,7 @@ QT2410 # nand write.e 0x32000000 0x00634000 real_size_of_rootfs_in_hex
 
 Please note that this will only work with root file system sizes that are smaller than the amount of memory above 0x32000000, which in the case of 64MB SDRAM is something like 32MB.
 
-=== TFTP ===
+=== TFTP on QT2410 ===
 
 The QT2410 cs8900a Ethernet can be used to download images via network.
 
