/* Usage of shell mode */

--- a/Gsmd.mw
+++ b/Gsmd.mw
@@ -66,9 +66,15 @@ EVENT: Netreg registered (home network)
 
 D03024033902
 # Dial 03024033902
+EVENT: Call Progress: UNKNOWN
+EVENT: Call Progress: PROCEED
+EVENT: Call Progress: SYNC
+EVENT: Call Progress: ALERT
 H
 # Hangup
-RSTR=`OK'
+EVENT: Call Progress: DISCONNECT
+EVENT: Call Progress: RELEASE
+
 EVENT: Incoming call type=2!
 EVENT: Incoming call clip=`"03024033902"'
 EVENT: Incoming call type=2!
