add actual bad block data from data sheet

--- a/NAND_bad_blocks.mw
+++ b/NAND_bad_blocks.mw
@@ -2,7 +2,9 @@
 
 NAND memory apparently gets shipped with blocks that are already bad.  The vendor just marks those blocks as bad, thus resulting in higher yield and lower per-unit cost.
 
-There is some number of blocks at the beginning which are guaranteed to be good.  That number is currently unknown for our NAND chip.
+The only block that is guaranteed to be good, is the first block (first 16kBytes).
+
+We are also guaranteed that a minimum of 4016 blocks (out of the 4096) are good.  This means up to 80 blocks (320kBytes) can be dead.
 
 == Solution ==
 
